* Fixed close button misplacement in views caused by jQuery update. #2264009 * Fixed collapsable fieldsets display caused by jQuery update. #2264009

--- a/css/style.css
+++ b/css/style.css
@@ -2377,9 +2377,12 @@ body.adminimal-backend ul.rules-autocomplete .rules-dsac-group {
 
 .views-ui-dialog .ui-dialog-titlebar-close span {
     display: block;
+    left: 0;
+    top: 0;
 }
 
 .views-ui-dialog #edit-options .collapsible {
     float: left;
     width: auto;
+    clear: both;
 }
